# goodgame

./: .envrc  .gitignore  Cargo.toml  build.rs  config.json  default.nix  flake.nix  options.nix  package.nix
gg-cli/: Cargo.toml  build.rs
gg-cli/src/: cli.rs  main.rs
gg-impl/: Cargo.toml
gg-impl/src/: lib.rs
src/: cli.rs  config.rs  games.rs  lib.rs  main.rs
