[package]
name = "goodgame-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
goodgame-impl = { version = "0.1.0", path = "../gg-impl" }
clap = { version = "4.5.40", features = ["derive", "env", "string", "unicode"] }
clap_complete = "4.5.54"

[build-dependencies]
goodgame-impl = { version = "0.1.0", path = "../gg-impl" }
clap = { version = "4.5.40", features = ["derive", "env", "string", "unicode"] }
clap_complete = "4.5.54"

[[bin]]
name = "gg"
path = "src/main.rs"